@@ -32,6 +32,15 @@
     <webpage>http://www.murrayc.com/</webpage>
     <icon>http://planet.gnome.org/heads/murrayc.png</icon>
   </person>
+  <person id="joeshaw">
+    <name>Joe Shaw</name>
+    <email>joeshaw@novell.com</email>
+    <email>joe@assbarn.com</email>
+    <nick>joe</nick>
+    <webpage>http://joeshaw.org/</webpage>
+    <icon>http://planet.gnome.org/heads/joe.png</icon>
+    <bugzilla-account>joeshaw@novell.com</bugzilla-account>
+  </person>
   <person id="jrl">
     <name>James Livingston</name>
     <email>jrl@ids.org.au</email>
